fix: add gap

--- a/components/CurrencySelector/CurrencySelector.module.css
+++ b/components/CurrencySelector/CurrencySelector.module.css
@@ -15,6 +15,7 @@
 .calc__group {
   display: flex;
   flex-direction: column;
+  gap: 10px;
 }
 
 .calc__article {
